tests/frontend/fail/multipledef/multipledef.act
constructor of LValue
interface constructor()

creates

	uint x := 2
	bool x := false
